--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -3,13 +3,8 @@
   "name": "Progressive Web Apps",
   "icons": [
     {
-      "src": "/pwa/images/icon-107.jpg",
-      "type": "image/jpeg",
-      "sizes": "107x107"
-    },
-    {
       "src": "/pwa/images/icon-215.jpg",
-      "type": "image/jpeg",
+      "type": "image/png",
       "sizes": "215x215"
     }
   ],
