--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "645x645"
     }
   ],
-  "start_url": "/pwa",
+  "start_url": "/pwa/",
   "background_color": "#f9d355",
   "display": "standalone",
   "scope": "/",
